--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <p class="header">Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícia</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notícia</a></li>
+            <li><a href="#">Curiosidades</a></li>
+            <li><a href="#">Fale Conosco</a></li>
+        </ul>
     </nav>
     <main>
         <article>
